--- a/sales.html
+++ b/sales.html
@@ -2,10 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Salmon Cookies</title>
   </head>
   <body>
-
-  <script src="app.js" type="text/javascript"></script>  
+  <ul id="lists">Tst</ul>
+  <ul id="lists2"></ul>
+  <ul id="lists3"></ul>
+  <ul id="lists4"></ul>
+  <ul id="lists5"></ul>
+  <script src="JS/app.js" type="text/javascript"></script>
   </body>
 </html>
