a lot of updates

--- a/sales.html
+++ b/sales.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Salmon Cookies</title>
+    <link rel="stylesheet" href="css/int-style.css" />
   </head>
   <body>
-  <ul id="lists">Tst</ul>
-  <ul id="lists2"></ul>
-  <ul id="lists3"></ul>
-  <ul id="lists4"></ul>
-  <ul id="lists5"></ul>
+  <table id="pike">
+
+  </table>
   <script src="JS/app.js" type="text/javascript"></script>
   </body>
 </html>
