--- a/sales.html
+++ b/sales.html
@@ -6,9 +6,14 @@
     <link rel="stylesheet" href="css/int-style.css" />
   </head>
   <body>
-  <table id="pike">
+    <div class="main-container">
+      <div class="inner">
+        <table id="pike">
 
-  </table>
+        </table>
+      </div>
+    </div>
+
   <script src="JS/app.js" type="text/javascript"></script>
   </body>
 </html>
