Event listener addition

--- a/sales.html
+++ b/sales.html
@@ -8,6 +8,27 @@
   <body>
     <div class="main-container">
       <div class="inner">
+        <form id="moreStores">
+          <fieldset>
+            <legend></legend>
+
+           <label for="storeLocation"></label>
+            <input name="storeLocation" type="text" />
+
+           <label for="minCustomers"></label>
+            <input name="minCustomers" type="number" />
+
+           <label for="maxCustomers"></label>
+            <input name="maxCustomers" type="number" />
+
+           <label for="avgCookiesSold"></label>
+            <input name="avgCookiesSold" type="number" />
+          <button type="submit">Please Work</button>
+          </fieldset>
+
+        </form>
+
+
         <table id="pike">
 
         </table>
