updates to day 4

--- a/sales.html
+++ b/sales.html
@@ -10,31 +10,26 @@
       <div class="inner">
         <form id="moreStores">
           <fieldset>
-            <legend></legend>
-
-           <label for="storeLocation"></label>
+            <legend>Add a new store!</legend>
+            <label for="storeLocation">Location Name</label>
             <input name="storeLocation" type="text" />
 
-           <label for="minCustomers"></label>
+            <label for="minCustomers">Min Customers Per Hour</label>
             <input name="minCustomers" type="number" />
 
-           <label for="maxCustomers"></label>
+            <label for="maxCustomers">Max Customers Per Hour</label>
             <input name="maxCustomers" type="number" />
 
-           <label for="avgCookiesSold"></label>
-            <input name="avgCookiesSold" type="number" />
-          <button type="submit">Please Work</button>
+            <label for="avgCookiesSold">Avereage Cookies Per Sale</label>
+            <input name="avgCookiesSold" type="text" />
+
+            <button type="submit">Please Work</button>
           </fieldset>
-
         </form>
-
-
         <table id="pike">
-
         </table>
       </div>
     </div>
-
-  <script src="JS/app.js" type="text/javascript"></script>
+    <script src="JS/app.js" type="text/javascript"></script>
   </body>
 </html>
