--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/ext-style.css" />
   </head>
   <body>
-    <!-- <div> -->
+    <div id="banners">
       <nav>
         <ul>
           <li>Home</li>
@@ -15,23 +15,27 @@
           <li>Contact</li>
         </ul>
       </nav>
-    <!-- </div> -->
+
     <header>
       <div>
         <h1>Pat's Salmon Cookies</h1>
       </div>
     </header>
 
-    <section class="about">
+    <section id="about">
 
     </section>
-    <section class="locations">
+    <section id="locations">
 
     </section>
-    <section class="contact">
+    <section id="shop">
+
+    </section>
+    <section id="contact">
 
     </section>
 
-  <script src=""></script>
+    <script src=""></script>
+    </div>
   </body>
 </html>
