--- a/index.html
+++ b/index.html
@@ -1,41 +1,68 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
+
+<head>
+  <meta charset="utf-8">
+  <title></title>
   <link rel="stylesheet" href="css/ext-style.css" />
-  </head>
-  <body>
-    <div id="banners">
-      <nav>
-        <ul>
-          <li>Home</li>
-          <li>About Us</li>
-          <li>Locations</li>
-          <li>Contact</li>
-        </ul>
-      </nav>
+</head>
 
-    <header>
-      <div>
-        <h1>Pat's Salmon Cookies</h1>
+<body>
+  <p id="layoutdims">Measure columns in: <a href="http://matthewjamestaylor.com/blog/ultimate-3-column-holy-grail-pixels.htm">Pixel widths</a> | <a href="http://matthewjamestaylor.com/blog/ultimate-3-column-holy-grail-ems.htm">Em widths</a> | <strong>Percentage widths</strong></p>
+  <div id="r">
+    <ul>
+  <li><a class="active" href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
+  </div>
+  <div class="colmask threecol">
+    <div class="colmid">
+      <div class="colleft">
+        <div class="col1">
+          <!-- Column 1 start -->
+
+          <!-- Column 1 end -->
+        </div>
+        <div class="col2">
+          <!-- Column 2 start -->
+          <h2>No CSS hacks</h2>
+        </div>
+        <div class="col3">
+          <!-- Column 3 start -->
+          <div id="ads">
+          </div>
+          <h2>Browser Compatibility</h2>
+          <p>This 3 column liquid Layout has been tested on the following browsers:</p>
+          <h3>iPhone &amp; iPod Touch</h3>
+          <ul>
+            <li>Safari</li>
+          </ul>
+          <h3>Mac</h3>
+          <ul>
+            <li>Safari</li>
+            <li>Firefox</li>
+            <li>Opera 9.25</li>
+            <li>Netscape 9.0.0.5 &amp; 7.1</li>
+          </ul>
+          <h3>Windows</h3>
+          <ul>
+            <li>Firefox 1.5, 2 &amp; 3</li>
+            <li>Safari</li>
+            <li>Opera 8.1 &amp; 9</li>
+            <li>Google Chrome</li>
+            <li>Explorer 5.5, 6 &amp; 7</li>
+            <li>Netscape 8</li>
+          </ul>
+          <!-- Column 3 end -->
+        </div>
       </div>
-    </header>
-
-    <section id="about">
-
-    </section>
-    <section id="locations">
-
-    </section>
-    <section id="shop">
-
-    </section>
-    <section id="contact">
-
-    </section>
-
-    <script src=""></script>
     </div>
-  </body>
+  </div>
+  <div id="footer">
+    <p>This page uses the <a href="http://matthewjamestaylor.com/blog/perfect-3-column.htm">Perfect 'Holy Grail' 3 Column Liquid Layout</a> by <a href="http://matthewjamestaylor.com">Matthew James Taylor</a>. View more <a href="http://matthewjamestaylor.com/blog/-website-layouts">website layouts</a>      and <a href="http://matthewjamestaylor.com/blog/-web-design">web design articles</a>.</p>
+  </div>
+</body>
+
 </html>
