--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <p id="layoutdims">Measure columns in: <a href="http://matthewjamestaylor.com/blog/ultimate-3-column-holy-grail-pixels.htm">Pixel widths</a> | <a href="http://matthewjamestaylor.com/blog/ultimate-3-column-holy-grail-ems.htm">Em widths</a> | <strong>Percentage widths</strong></p>
+  <p id="layoutdims">Blah blagh<strong>Buh Blah Blah</strong></p>
   <div id="r">
     <ul>
   <li><a class="active" href="#home">Home</a></li>
@@ -27,33 +27,33 @@
         </div>
         <div class="col2">
           <!-- Column 2 start -->
-          <h2>No CSS hacks</h2>
+          <h2>Header 2</h2>
         </div>
         <div class="col3">
           <!-- Column 3 start -->
           <div id="ads">
           </div>
-          <h2>Browser Compatibility</h2>
-          <p>This 3 column liquid Layout has been tested on the following browsers:</p>
-          <h3>iPhone &amp; iPod Touch</h3>
+          <h2>Header 2</h2>
+          <p>P tags P tags</p>
+          <h3>Header 3</h3>
           <ul>
-            <li>Safari</li>
+            <li>List Items</li>
           </ul>
           <h3>Mac</h3>
           <ul>
-            <li>Safari</li>
-            <li>Firefox</li>
-            <li>Opera 9.25</li>
-            <li>Netscape 9.0.0.5 &amp; 7.1</li>
+            <li>List Items</li>
+            <li>List Items</li>
+            <li>List Items</li>
+            <li>List Items</li>
           </ul>
-          <h3>Windows</h3>
+          <h3>Header 3</h3>
           <ul>
-            <li>Firefox 1.5, 2 &amp; 3</li>
-            <li>Safari</li>
-            <li>Opera 8.1 &amp; 9</li>
-            <li>Google Chrome</li>
-            <li>Explorer 5.5, 6 &amp; 7</li>
-            <li>Netscape 8</li>
+            <li>List Items</li>
+            <li>List Items</li>
+            <li>List Items</li>
+            <li>List Items</li>
+            <li>List Items</li>
+            <li>List Items</li>
           </ul>
           <!-- Column 3 end -->
         </div>
@@ -61,7 +61,7 @@
     </div>
   </div>
   <div id="footer">
-    <p>This page uses the <a href="http://matthewjamestaylor.com/blog/perfect-3-column.htm">Perfect 'Holy Grail' 3 Column Liquid Layout</a> by <a href="http://matthewjamestaylor.com">Matthew James Taylor</a>. View more <a href="http://matthewjamestaylor.com/blog/-website-layouts">website layouts</a>      and <a href="http://matthewjamestaylor.com/blog/-web-design">web design articles</a>.</p>
+    <p>Footer area footer area footer area footer area</a>.</p>
   </div>
 </body>
 
