bunch of changes

--- a/index.html
+++ b/index.html
@@ -1,68 +1,134 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <meta charset="utf-8">
-  <title></title>
-  <link rel="stylesheet" href="css/ext-style.css" />
-</head>
-
-<body>
-  <p id="layoutdims">Blah blagh<strong>Buh Blah Blah</strong></p>
-  <div id="r">
-    <ul>
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
-</ul>
-  </div>
-  <div class="colmask threecol">
-    <div class="colmid">
-      <div class="colleft">
-        <div class="col1">
-          <!-- Column 1 start -->
-
-          <!-- Column 1 end -->
-        </div>
-        <div class="col2">
-          <!-- Column 2 start -->
-          <h2>Header 2</h2>
-        </div>
-        <div class="col3">
-          <!-- Column 3 start -->
-          <div id="ads">
+  <head>
+    <meta charset="utf-8">
+    <title>About Me</title>
+    <link rel="stylesheet" href="css/ext-style.css" />
+    <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css" />
+  </head>
+  <body>
+    <nav>
+      <span><img class="face-icon" src="img/assets/chinook.jpg" /></span>
+      <ul>
+        <li><a href="index.html#">Home</a></li>
+        <li><a href="#homeNav">About Us</a></li>
+        <li><a href="#locations">Locations</a></li>
+        <li><a href="#merch">Merchandise</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="sales.html#">Employee Login</a></li>
+      </ul>
+    </nav>
+  <header>
+      <div class="container">
+        <div class="row">
+          <div class="intro-text">
+            <span class="name" id="home"><img src="img/assets/salmon.png" /></span>
+            <span class="name">Pat's Salmon Cookies</span>
+            <span class="blerb">The only cookies made with real <span id="what-color">salmon</span>!</span>
           </div>
-          <h2>Header 2</h2>
-          <p>P tags P tags</p>
-          <h3>Header 3</h3>
-          <ul>
-            <li>List Items</li>
-          </ul>
-          <h3>Mac</h3>
-          <ul>
-            <li>List Items</li>
-            <li>List Items</li>
-            <li>List Items</li>
-            <li>List Items</li>
-          </ul>
-          <h3>Header 3</h3>
-          <ul>
-            <li>List Items</li>
-            <li>List Items</li>
-            <li>List Items</li>
-            <li>List Items</li>
-            <li>List Items</li>
-            <li>List Items</li>
-          </ul>
-          <!-- Column 3 end -->
         </div>
       </div>
-    </div>
-  </div>
-  <div id="footer">
-    <p>Footer area footer area footer area footer area</a>.</p>
-  </div>
-</body>
-
+    </header>
+    <section class="aboutSect" id="homeNav">
+      <div class="container">
+        <div class="row">
+          <div class="text-center col-12">
+            <img id="newCutter" src="img/assets/cutter.jpeg" />
+            <h2>About <span id="what-color">Us</span>.</h2>
+          </div>
+        </div>
+        <div class="aboutme" id="pagewrap">
+            <p>Pat's Salmon Cookies is a three-generational Salmon cookie recipe that's been handed down from grandfather to son to grandson (whose father name was Pat). For over 30 years we’ve made these cookies for family and friends. We then sold them to a neighborhood grocery store and the response has been so great that we decided to share this ultimate cookie experience with the rest of the world.</p><p>Thank you for choosing Pat’s Salmon Cookies. You will always get our very best. Enjoy our consistently fresh taste cookie after cookie. Are you ready?</p><p>When you say Pat’s Salmon Cookies, you’ve said a mouthful. We’ve learned that there’s a powerful demand for what we are passionate about, an excellent Salmon cookie. Our mission is to keep it simple by using the highest quality of ingredients. Pats’s cookies contain no hydrogenated oils, zero grams of trans fat, and absolutely no artificial preservatives, flavors or colors.</p>
+        </div>
+      </div>
+    </section>
+    <section class="projSect" id="locations">
+      <div class="container">
+        <div class="row">
+          <div class="text-center col-12">
+            <img id="fish" src="img/assets/fish.jpg" />
+            <h2>Six locations across the <span id="what-color">NW</span></h2>
+          </div>
+        </div>
+        <div class="projects" id="pagewrap">
+          <div class="colText" id="leftCol">
+          	<a href="pike.html"><h3 class="linkhover">Pike Place</h3></a>
+            <h4>401 Pike Ave</h4>
+            <p>Located in the heart of the Pike Place Market this is Pat's oldest location. Even though we are surrounded by a lot of dirty people we manage to keep this location clean!</p>
+          </div>
+          <div class="colText" id="middleCol">
+          	<a href="seacenter.html"><h3 class="linkhover">Seattle Center</h3></a>
+            <h4>301 5th Ave</h4>
+          	<p>Find us in the armory for some fresh baked salmon cookie goodness! Our Seattle Center location has been open since 1991 and have been a tourist favorite ever since we opened our doors.</p>
+          </div>
+          <aside class="colText" id="rightCol">
+          	<a href="airport.html"><h3 class="linkhover">SeaTac Airport</h3></a>
+            <h4>111 Jetway Ln</h4>
+          	<p>Our location located within the Sea-Tac Airport is a perfect spot to pick up last minute gifts to bring a Seattle treat to your friends and family across the globe! Never show up empty handed!</p>
+          </aside>
+        </div>
+        <div class="projects" id="pagewrap">
+          <div class="colText" id="leftCol">
+          	<a href="caphill.html"><h3 class="linkhover">Capitol Hill</h3></a>
+            <h4>401 Pine Ave</h4>
+            <p>Our Capitol Hill location is known for late night gatherings. This location is open until 2am daily! Serving Seattle's hippest drunks every night!</p>
+          </div>
+          <div class="colText" id="middleCol">
+          	<a href="alki.html"><h3 class="linkhover">Alki Beach</h3></a>
+            <h4>301 Alki Ave</h4>
+          	<p>Nothing is better then a fresh baked salmon cookie while you are walking along Alki beach! Be sure to stop by early as this location tends to sell out of stock just about everyday!</p>
+          </div>
+          <aside class="colText" id="rightCol">
+          	<a href="ballard.html"><h3 class="linkhover">Ballard</h3></a>
+            <h4>111 Market St</h4>
+          	<p>Our Ballard location is located in the heart of downtown Ballard! This is another one of our late night locations - open until 2am daily, we are there to sell our scrumptious cookies until last call.</p>
+          </aside>
+        </div>
+      </div>
+    </section>
+    <section class="workSect" id="merch">
+      <div class="container">
+        <div class="row">
+          <div class="text-center col-12">
+            <h2>We've got <span id="what-color">salmon</span> cookie swag!</h2>
+            <span class="intro-text blerb">Check out our new merch!</span>
+            <img id="shirt" src="img/assets/shirt.jpg" />
+          </div>
+        </div>
+        <div id="pagewrap">
+          <div id="aboutMe">
+            <p id="workP">
+              Here at Pat's Salmon Cookies we are also coming up with the freshest new swag! Make sure to check our store for great gift ideas!</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="contactSect" id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="text-center col-12">
+            <img id="frost" src="img/assets/frosted-cookie2.jpg" />
+            <h2>Reach out. <span id="what-color">Connect</span>. Say hello.</h2>
+          </div>
+        </div>
+        <div id="pagewrap">
+          <div id="aboutMe">
+            <p id="center">Check us out on our social media pages! Click any of the icons below and drop us a follow!</p>
+          </div>
+          <div id="aboutMe">
+            <p id="center">
+              For business inquiries drop us a line at 206-555-1212 or email us at <a href="mailto:patsalmoncookies@gmail.com">PatSalmonCookies@gmail.com</a>
+            </p>
+          </div>
+          <div class="icons">
+            <a href="#"><i class="fa fa-linkedin fa-3x social-icon-first" aria-hidden"true"></i></a>
+            <a href="#"><i class="fa fa-twitter fa-3x social-icon" aria-hidden"true"></i></a>
+            <a href="#"><i class="fa fa-facebook fa-3x social-icon" aria-hidden"true"></i></a>
+            <a href="#"><i class="fa fa-instagram fa-3x social-icon-last" aria-hidden"true"></i></a>
+          </div>
+          <span class="name" id="home"><img id="family" src="img/assets/family.jpg" /></span>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
