--- a/sales.html
+++ b/sales.html
@@ -4,10 +4,34 @@
     <meta charset="utf-8">
     <title>Salmon Cookies</title>
     <link rel="stylesheet" href="css/int-style.css" />
+    <link rel="stylesheet" href="css/ext-style.css" />
+
   </head>
   <body>
-    <div class="main-container">
-      <div class="inner">
+    <nav>
+      <span><img class="face-icon" src="img/assets/chinook.jpg" /></span>
+      <ul>
+        <li><a href="index.html#">Home</a></li>
+        <li><a href="index.html#homeNav">About Us</a></li>
+        <li><a href="index.html#locations">Locations</a></li>
+        <li><a href="index.html#merch">Merchandise</a></li>
+        <li><a href="index.html#contact">Contact</a></li>
+      </ul>
+    </nav>
+  <header>
+      <div class="container">
+        <div class="row">
+          <div class="intro-text">
+            <span class="name" id="home"><img src="img/assets/salmon.png" /></span>
+            <span class="name">Pat's Salmon Cookies</span>
+            <span class="blerb">The only cookies made with real <span id="what-color">salmon</span>!</span>
+          </div>
+        </div>
+      </div>
+  </header>
+  <section>
+    <div class="container">
+      <div class="row">
         <form id="moreStores">
           <fieldset>
             <legend>Add a new store!</legend>
@@ -30,6 +54,7 @@
         </table>
       </div>
     </div>
+  </section>
     <script src="JS/app.js" type="text/javascript"></script>
   </body>
 </html>
