--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>About Me</title>
+    <title>Pat's Salmon Cookies</title>
     <link rel="stylesheet" href="css/ext-style.css" />
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css" />
   </head>
